--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
+  <link rel="stylesheet" href="./css/normalize.min.css">
   <link rel="stylesheet" href="./css/styles.css">
   <script defer src="./js/scripts.js"></script>
 </head>
