--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
 
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
+    
     <script defer src="./js/scripts.js"></script>
 </head>
 
 <body>
     <nav class="navbar" role="navigation">
+        <img src="assets/logo.svg" alt="Go back to main page" class="logo">
         <ul class="menu main-menu toggle" data-class-toggled="toggled">
             <div class="menu-header icon-menu"></div>
             <ul class="item">
@@ -40,16 +47,18 @@
         </ul>
     </nav>
 
-    <section id="intro">
-        <h1>Make remote work</h1>
+    <section class="intro bg">
+        <div class="intro hero-img"></div>
+        <h1 class="intro header">Make remote work</h1>
 
-        <p>Get your team in sync, no matter your location. Streamline processes,
+        <p class="intro text">Get your team in sync, no matter your location. Streamline processes,
             create team rituals, and watch productivity soar.</p>
 
         <a href="#">
-            <div>Learn more</div>
+            <div class="intro btn">Learn more</div>
         </a>
     </section>
+
 </body>
 
 </html>
