Style main-menu for desktop

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             </ul>
             <li><a href="#">Careers</a></li>
             <li><a href="#">About</a></li>
+            <div class="separator"></div>
             <li class="item-button"><a href="#"><div class="btn bg-white"><p>Login</p></div></a></li>
             <li class="item-button"><a href="#"><div class="btn bg-white border-black"><p>Register</p></div></a></li>
         </ul>
