Set variables for responsive on mobile

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                         <li class="item"><a href="#">Blog</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">About</a></li>
+                <li class="item"><a href="#">Careers</a></li>
+                <li class="item"><a href="#">About</a></li>
                 <div class="desktop-separator"></div>
                 <li class="item-button"><a href="#">
                         <div class="btn bg-white">
@@ -65,16 +65,16 @@
             <img src="./assets/image-hero-mobile.png" alt="" class="mobile">
         </div>
         <div class="cta">
-            <div class="desktop-separator"></div>
+            <div class="separator"></div>
 
             <h1 class="header">Make remote&nbsp;work</h1>
 
-            <div class="desktop-separator"></div>
+            <div class="separator"></div>
 
             <p class="text">Get your team in sync, no matter your location. Streamline processes,
                 create team rituals, and watch productivity soar.</p>
                 
-            <div class="desktop-separator"></div>
+            <div class="separator"></div>
 
             <a href="#">
                 <div class="btn bg-black">
@@ -82,7 +82,7 @@
                 </div>
             </a>
 
-            <div class="desktop-separator"></div>
+            <div class="separator"></div>
 
             <div class="client-logos">
                 <img src="assets/client-databiz.svg" alt="">
@@ -94,6 +94,8 @@
                 <img src="assets/client-maker.svg" alt="">
                 <div class="desktop-separator"></div>
             </div>
+            
+            <div class="separator"></div>
         </div>
     </section>
 
