Move all CSS variables to separate file for faster development

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/normalize.min.css">
+    <link rel="stylesheet" href="./css/globalvar.css">
     <link rel="stylesheet" href="./css/styles.css">
 
     <script defer src="./js/scripts.js"></script>
@@ -94,7 +95,7 @@
                 <img src="assets/client-maker.svg" alt="">
                 <div class="desktop-separator"></div>
             </div>
-            
+
             <div class="separator"></div>
         </div>
     </section>
